--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,6 @@
 *.vcf.gz filter=lfs diff=lfs merge=lfs -text
 *.tbi filter=lfs diff=lfs merge=lfs -text
 *.bai filter=lfs diff=lfs merge=lfs -text
+*.Rds filter=lfs diff=lfs merge=lfs -text
+*.Rdata filter=lfs diff=lfs merge=lfs -text
+*.Rda filter=lfs diff=lfs merge=lfs -text
